--- a/apps/mix-portal/src/app/routes/portal/detail-template/detail-template.component.scss
+++ b/apps/mix-portal/src/app/routes/portal/detail-template/detail-template.component.scss
@@ -5,6 +5,8 @@
 
   &__code-zone {
     margin: 15px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    border-radius: 5px;
   }
 
   &__code-editor {
