--- a/libs/mix.ui/src/lib/code-editor/code-editor.component.html
+++ b/libs/mix.ui/src/lib/code-editor/code-editor.component.html
@@ -1,4 +1,5 @@
 <div class="code-editor">
-  <ngx-monaco-editor [(ngModel)]="code"
-                     [options]="templateOption"></ngx-monaco-editor>
+  <ngx-monaco-editor [ngModel]="code"
+                     [options]="templateOption"
+                     (ngModelChange)="onCodeChange($event)"></ngx-monaco-editor>
 </div>
