fix(theme-list): add date pipe

--- a/apps/mix-portal/src/app/routes/portal/list-theme/list-theme.component.html
+++ b/apps/mix-portal/src/app/routes/portal/list-theme/list-theme.component.html
@@ -30,7 +30,8 @@
             <div (click)="themeClick(data)"> {{ data.displayName }}</div>
           </ng-template>
         </div>
-        <div [header]="'Created Date'"
+        <div [columnType]="'DATE'"
+             [header]="'Created Date'"
              mixTableColumn
              key="createdDateTime"></div>
       </mix-data-table>
