--- a/libs/mix.share/src/components/user-list-hub/user-list-hub.component.html
+++ b/libs/mix.share/src/components/user-list-hub/user-list-hub.component.html
@@ -1,5 +1,5 @@
 <div class="user-list-hub">
-  <div class="user-list-hub__title"> Users online in hub </div>
+  <div class="user-list-hub__title"> Users online in this page </div>
   <div class="user-list-hub__avatar">
     <tui-avatar [autoColor]="true"
                 [rounded]="true"
