feat(portal): add skeleton, add setup theme page

--- a/apps/mix-portal/src/app/routes/auth/login/login.component.html
+++ b/apps/mix-portal/src/app/routes/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login-page"
-     [formGroup]="signinForm">
+     [formGroup]="signInForm">
   <span class="mask bg-gradient-info opacity-8"></span>
   <div class="login-form-logo"></div>
   <div class="login-form mix-form blur">
