feat(portal): add setup site step

--- a/apps/mix-portal/src/app/routes/init/setup-theme/setup-theme.component.html
+++ b/apps/mix-portal/src/app/routes/init/setup-theme/setup-theme.component.html
@@ -70,6 +70,7 @@
       <button [appearance]="'outline'"
               [showLoader]="!!(loading$ | async)"
               [size]="'m'"
+              (click)="onSelectAll()"
               tuiButton> Select All </button>
       <button [disabled]="!currentSelectedPages.length &&
                           !currentSelectedModules.length &&
