feat(portal): add post detail

--- a/libs/mix.ui/src/lib/skeleton-loading/skeleton-loading.component.html
+++ b/libs/mix.ui/src/lib/skeleton-loading/skeleton-loading.component.html
@@ -62,4 +62,51 @@
       </tbody>
     </table>
   </ng-container>
+
+  <ng-container *ngIf="type === 'form'">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-11">
+          <span class="skeleton-box"
+                style="width: 100px"></span>
+          <span class="skeleton-box"
+                style="height: 2rem"></span>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-11">
+          <span class="skeleton-box"
+                style="width: 100px"></span>
+          <span class="skeleton-box"
+                style="height: 2rem"></span>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-6">
+          <span class="skeleton-box"
+                style="width: 100px"></span>
+          <span class="skeleton-box"
+                style="height: 2rem"></span>
+        </div>
+
+        <div class="col-5">
+          <span class="skeleton-box"
+                style="width: 100px"></span>
+          <span class="skeleton-box"
+                style="height: 2rem"></span>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-11">
+          <span class="skeleton-box"
+                style="width: 100px"></span>
+          <span class="skeleton-box"
+                style="height: 5rem"></span>
+        </div>
+      </div>
+    </div>
+  </ng-container>
 </div>
