--- a/libs/mix.share/src/components/data-table/data-table.component.scss
+++ b/libs/mix.share/src/components/data-table/data-table.component.scss
@@ -1,6 +1,6 @@
 .mix-data-table {
   width: 100%;
-  padding: 0 15px;
+  padding: 10px 15px;
 
   &__filters {
     width: 100%;
@@ -28,6 +28,7 @@
     position: relative;
     overflow: hidden;
     display: flex;
+    margin-top: 10px;
   }
 
   &__main-table {
