--- a/libs/mix.ui/src/lib/rich-text-editor/rich-text-editor.component.html
+++ b/libs/mix.ui/src/lib/rich-text-editor/rich-text-editor.component.html
@@ -1,1 +1,8 @@
-<p>rich-text-editor works!</p>
+<label [label]="label + ':'"
+       tuiLabel>
+  <tui-editor class="editor"
+              [ngModel]="value"
+              (ngModelChange)="onValueChange($event)"
+              new>
+  </tui-editor>
+</label>
