--- a/libs/mix.share/src/components/content-detail-container/content-detail-container.component.scss
+++ b/libs/mix.share/src/components/content-detail-container/content-detail-container.component.scss
@@ -1,9 +1,10 @@
 .content-detail-container {
   width: 100%;
   height: 100%;
+  height: calc(100vh - 50px);
+  overflow: auto;
 
   &__toolbar {
-    margin-bottom: 10px;
     background-color: #f0f4f9;
     display: flex;
     align-items: center;
@@ -34,5 +35,9 @@
         margin-right: 5px;
       }
     }
+  }
+
+  &__body {
+    padding: 10px;
   }
 }
