--- a/apps/mix-portal/src/app/routes/portal/post/detail/post-detail.component.scss
+++ b/apps/mix-portal/src/app/routes/portal/post/detail/post-detail.component.scss
@@ -8,4 +8,10 @@
     border: 1px solid var(--tui-base-04);
     box-shadow: var(--mix-box-shadow);
   }
+
+  tui-tabs {
+    position: sticky;
+    top: 55px;
+    z-index: 2;
+  }
 }
