--- a/apps/mix-portal/src/styles.scss
+++ b/apps/mix-portal/src/styles.scss
@@ -42,3 +42,18 @@ body {
 i-tabler {
   stroke-width: 1.5 !important;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #e4e4e4;
+  border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 100px;
+  background-image: linear-gradient(180deg, #d0368a 0%, #708ad4 99%);
+  box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
+}
