--- a/libs/mix.share/src/components/content-detail-container/content-detail-container.component.scss
+++ b/libs/mix.share/src/components/content-detail-container/content-detail-container.component.scss
@@ -1,10 +1,13 @@
 .content-detail-container {
   width: 100%;
-  height: 100%;
   height: calc(100vh - 50px);
   overflow: auto;
+  position: relative;
 
   &__toolbar {
+    position: sticky;
+    top: 0;
+    z-index: 2;
     background-color: #f0f4f9;
     display: flex;
     align-items: center;
